--- a/front/app.json
+++ b/front/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "householdApp",
-    "slug": "householdApp",
+    "name": "front",
+    "slug": "front",
     "version": "1.0.0",
     "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -25,7 +26,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
     }
