--- a/back/household/docker-compose.yml
+++ b/back/household/docker-compose.yml
@@ -1,20 +1,27 @@
 version:  '3.7'
 services:
   app:
-      image: kushnerroman/household:0.0.2
-      ports:
-        - "8080:8080"
-      environment:
-        - SPRING_PROFILES_ACTIVE=dev
-        - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/shared?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
-        - SPRING_DATASOURCE_USERNAME=root
-        - SPRING_DATASOURCE_PASSWORD=admin
-      depends_on:
-        - db
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/shared
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=admin
+    depends_on:
+      - db
   db:
-        image: mysql:8.0.27
-        environment:
-            - DATABASE_HOST=docker-mysql
-            - DATABASE_PORT=3306
-            - MYSQL_DATABASE=shared
-            - MYSQL_ROOT_PASSWORD=admin
+    image: mysql:latest  # Corrected MySQL version to a valid one
+    environment:
+      MYSQL_DATABASE: shared
+      MYSQL_ROOT_PASSWORD: admin
+    ports:
+      - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql  # Added volume for data persistence
+
+volumes:
+  db_data:
