--- a/back/household/src/main/resources/application.properties
+++ b/back/household/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=household
 
 # ===============================
 #  MySQL Driver
+#${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}
 # ===============================
  spring.datasource.url=jdbc:mysql://localhost:3306/shared?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=admin
+ spring.datasource.username=${MYSQL_USER:root}
+ spring.datasource.password=${MYSQL_PASSWORD:admin}
  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
